crates/pamoja-ffi/include/pamoja.h

// Where a fix sits relative to a geofence, including the moment it crosses.
typedef enum {
  // The fix is inside the fence and was inside before, or is the first fix inside.
  PamojaBoundary_Inside = 0,
  // The fix is outside the fence and was outside before, or is the first fix outside.
  PamojaBoundary_Outside = 1,
  // The fix just crossed from inside to outside: the moment to raise a breach alert.
  PamojaBoundary_Exited = 2,
  // The fix just crossed from outside back inside.
  PamojaBoundary_Entered = 3,
} PamojaBoundary;
// An opaque handle to a raw-to-units calibration.
typedef struct PamojaCalibration PamojaCalibration;
// An opaque handle to a complementary filter.
typedef struct PamojaComplementary PamojaComplementary;
// An opaque handle to a boolean debouncer.
typedef struct PamojaDebounce PamojaDebounce;
// An opaque handle to a circular geofence.
typedef struct PamojaGeofence PamojaGeofence;
// An opaque handle to a one-dimensional Kalman filter.
typedef struct PamojaKalman PamojaKalman;
// An opaque handle to a rate limiter.
typedef struct PamojaRamp PamojaRamp;
// An opaque handle to a step-change detector.
typedef struct PamojaSurge PamojaSurge;
// A latitude and longitude in degrees.
typedef struct {
  // Degrees north of the equator, negative for south.
  double latitude;
  // Degrees east of the prime meridian, negative for west.
  double longitude;
} PamojaCoordinate;
// Roll and pitch, in degrees.
typedef struct {
  // Rotation about the forward axis, in degrees, from -180 to 180.
  double roll;
  // Rotation about the right axis, in degrees, from -90 to 90.
  double pitch;
} PamojaTilt;
// Releases a Kalman filter handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `kalman` must be a handle from [`pamoja_kalman_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_kalman_free(PamojaKalman *kalman);
// Releases a debouncer handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `debounce` must be a handle from [`pamoja_debounce_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_debounce_free(PamojaDebounce *debounce);
// Releases a rate limiter handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `ramp` must be a handle from [`pamoja_ramp_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_ramp_free(PamojaRamp *ramp);
// Releases a surge detector handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `surge` must be a handle from a surge constructor that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_surge_free(PamojaSurge *surge);
// Releases a calibration handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `calibration` must be a handle from a calibration constructor that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_calibration_free(PamojaCalibration *calibration);
// Releases a geofence handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `geofence` must be a handle from [`pamoja_geofence_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_geofence_free(PamojaGeofence *geofence);
// Reads a Kalman filter's current estimate without folding in a reading.
//
// # Returns
//
// The current estimate, or NaN if `kalman` is null.
//
// # Safety
//
// `kalman` must be a live handle from [`pamoja_kalman_new`], or null.
float pamoja_kalman_estimate(const PamojaKalman *kalman);
// Creates a debouncer that requires `samples` agreeing readings to change state.
//
// # Returns
//
// A handle the caller must release with [`pamoja_debounce_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaDebounce *pamoja_debounce_new(uint16_t samples, bool initial);
// Feeds a raw reading to a debouncer and returns the settled state.
//
// # Returns
//
// The debounced state, or `false` if `debounce` is null.
//
// # Safety
//
// `debounce` must be a live handle from [`pamoja_debounce_new`], or null.
bool pamoja_debounce_update(PamojaDebounce *debounce, bool raw);
// Reports a debouncer's settled state without feeding it a reading.
//
// # Returns
//
// The debounced state, or `false` if `debounce` is null.
//
// # Safety
//
// `debounce` must be a live handle from [`pamoja_debounce_new`], or null.
bool pamoja_debounce_state(const PamojaDebounce *debounce);
// Creates a rate limiter starting at `start` and moving at most `max_step`.
//
// # Returns
//
// A handle the caller must release with [`pamoja_ramp_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaRamp *pamoja_ramp_new(float start, float max_step);
// Moves a ramp one step toward `target` and returns the new value.
//
// # Returns
//
// The rate-limited value, or NaN if `ramp` is null.
//
// # Safety
//
// `ramp` must be a live handle from [`pamoja_ramp_new`], or null.
float pamoja_ramp_update(PamojaRamp *ramp, float target);
// Reads a ramp's current value.
//
// # Returns
//
// The current value, or NaN if `ramp` is null.
//
// # Safety
//
// `ramp` must be a live handle from [`pamoja_ramp_new`], or null.
float pamoja_ramp_value(const PamojaRamp *ramp);
// Forces a ramp to a value without rate limiting.
//
// # Safety
//
// `ramp` must be a live handle from [`pamoja_ramp_new`], or null.
void pamoja_ramp_set(PamojaRamp *ramp, float value);
// Creates a detector for rises of more than `limit` between readings.
//
// # Returns
//
// A handle the caller must release with [`pamoja_surge_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaSurge *pamoja_surge_rising(float limit);
// Creates a detector for falls of more than `limit` between readings.
//
// # Returns
//
// A handle the caller must release with [`pamoja_surge_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaSurge *pamoja_surge_falling(float limit);
// Feeds a value to a surge detector.
//
// # Returns
//
// `true` if the change since the previous reading went past the limit in the
// watched direction, having written its size, as a positive number, to `out_delta`;
// `false` otherwise, on the first reading, or if `surge` is null.
//
// # Safety
//
// `surge` must be a live handle from a surge constructor, or null, and
// `out_delta` must point to a writable `float` or be null.
bool pamoja_surge_update(PamojaSurge *surge, float value, float *out_delta);
// Creates a calibration applying `raw * scale + offset`.
//
// # Returns
//
// A handle the caller must release with [`pamoja_calibration_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaCalibration *pamoja_calibration_linear(float scale, float offset);
// Creates a calibration fitted through two known reference points.
//
// # Returns
//
// A handle the caller must release with [`pamoja_calibration_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaCalibration *pamoja_calibration_two_point(float raw_low,
                                                float value_low,
                                                float raw_high,
                                                float value_high);
// Converts a raw reading into calibrated units.
//
// # Returns
//
// The calibrated value, or NaN if `calibration` is null.
//
// # Safety
//
// `calibration` must be a live handle from a calibration constructor, or null.
float pamoja_calibration_apply(const PamojaCalibration *calibration, float raw);
// Creates a circular geofence of `radius_m` around `center`.
//
// # Returns
//
// A handle the caller must release with [`pamoja_geofence_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaGeofence *pamoja_geofence_new(PamojaCoordinate center, double radius_m);
// Feeds a fix to a geofence and reports where it sits, including a crossing.
//
// # Returns
//
// The boundary state for this fix, or [`PamojaBoundary::Outside`] if `geofence`
// is null.
//
// # Safety
//
// `geofence` must be a live handle from [`pamoja_geofence_new`], or null.
PamojaBoundary pamoja_geofence_update(PamojaGeofence *geofence, PamojaCoordinate point);
// Reports whether a fix lies inside a geofence, without recording a crossing.
//
// # Returns
//
// `true` if the fix is inside, or `false` if it is outside or `geofence` is null.
//
// # Safety
//
// `geofence` must be a live handle from [`pamoja_geofence_new`], or null.
bool pamoja_geofence_contains(const PamojaGeofence *geofence, PamojaCoordinate point);
// Returns the great-circle distance between two coordinates, in meters.
double pamoja_coordinate_distance_to(PamojaCoordinate from, PamojaCoordinate to);
// Returns the initial bearing from one coordinate to another, in degrees.
double pamoja_coordinate_bearing_to(PamojaCoordinate from, PamojaCoordinate to);
// Holds a reading at `center` while it stays within `width` either side, so small
// wiggle around a setpoint does not act.
//
// # Returns
//
// `center` while `value` is within `width` of it, and otherwise `value` unchanged.
float pamoja_kit_deadband(float value, float center, float width);
// Creates a complementary filter, which fuses a drifting rate with a noisy absolute
// reading.
//
// # Arguments
//
// * `alpha` - the weight on the integrated rate, held to 0 to 1; near 1 trusts the rate and
//   corrects slowly. One that is not a number is taken as 0, following the absolute
//   reading.
// * `initial` - the starting estimate.
//
// # Returns
//
// A handle the caller must release with [`pamoja_complementary_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaComplementary *pamoja_complementary_new(float alpha, float initial);
// Fuses a rate and an absolute reading over a time step.
//
// If the rate, the absolute reading, or the time step is not a finite number, the update
// is ignored.
//
// # Returns
//
// The fused estimate, or NaN if `filter` is null.
//
// # Safety
//
// `filter` must be a live handle from [`pamoja_complementary_new`], or null.
float pamoja_complementary_update(PamojaComplementary *filter,
                                  float rate,
                                  float absolute,
                                  float dt);
// Reads a complementary filter's estimate.
//
// # Returns
//
// The estimate, or NaN if `filter` is null.
//
// # Safety
//
// `filter` must be a live handle from [`pamoja_complementary_new`], or null.
float pamoja_complementary_estimate(const PamojaComplementary *filter);
// Releases a complementary filter handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `filter` must be a handle from [`pamoja_complementary_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_complementary_free(PamojaComplementary *filter);
// Computes roll and pitch from a three-axis accelerometer at rest.
//
// # Arguments
//
// * `ax` - acceleration along the forward axis, in any unit.
// * `ay` - acceleration along the right axis, in the same unit.
// * `az` - acceleration along the up axis, in the same unit.
//
// # Returns
//
// The tilt in degrees.
PamojaTilt pamoja_imu_tilt_from_accel(double ax, double ay, double az);
// Computes the dew point from the air temperature and relative humidity.
//
// # Arguments
//
// * `celsius` - the air temperature, in degrees Celsius.
// * `humidity_percent` - the relative humidity, in percent; one at or below 0 is taken as
//   a tiny positive value.
//
// # Returns
//
// The dew point, in degrees Celsius.
double pamoja_weather_dew_point(double celsius, double humidity_percent);
// Converts degrees Celsius to degrees Fahrenheit.
float pamoja_units_celsius_to_fahrenheit(float celsius);
// Converts degrees Fahrenheit to degrees Celsius.
float pamoja_units_fahrenheit_to_celsius(float fahrenheit);
// Converts degrees Celsius to kelvin.
float pamoja_units_celsius_to_kelvin(float celsius);
// Converts kelvin to degrees Celsius.
float pamoja_units_kelvin_to_celsius(float kelvin);
// Converts pascals to hectopascals.
float pamoja_units_pascals_to_hectopascals(float pascals);
// Converts hectopascals to pascals.
float pamoja_units_hectopascals_to_pascals(float hectopascals);
// Converts pascals to kilopascals.
float pamoja_units_pascals_to_kilopascals(float pascals);
// Converts kilopascals to pascals.
float pamoja_units_kilopascals_to_pascals(float kilopascals);
// Converts pascals to pounds per square inch.
float pamoja_units_pascals_to_psi(float pascals);
// Converts pounds per square inch to pascals.
float pamoja_units_psi_to_pascals(float psi);
// Converts a ratio from 0 to 1 to a percentage.
float pamoja_units_ratio_to_percent(float ratio);
// Converts a percentage to a ratio from 0 to 1.
float pamoja_units_percent_to_ratio(float percent);