bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Capabilities.cs


    /// <summary>Reads a Kalman filter's current estimate.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_kalman_estimate(IntPtr kalman);

    /// <summary>Releases a Kalman handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_kalman_free(IntPtr kalman);

    /// <summary>Creates a boolean debouncer.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_debounce_new(
        ushort samples,
        [MarshalAs(UnmanagedType.U1)] bool initial);

    /// <summary>Feeds a raw reading to a debouncer and returns the settled state.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_debounce_update(
        IntPtr debounce,
        [MarshalAs(UnmanagedType.U1)] bool raw);

    /// <summary>Reports a debouncer's settled state.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_debounce_state(IntPtr debounce);

    /// <summary>Releases a debouncer handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_debounce_free(IntPtr debounce);

    /// <summary>Creates a rate limiter.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_ramp_new(float start, float maxStep);

    /// <summary>Moves a ramp one step toward a target.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ramp_update(IntPtr ramp, float target);

    /// <summary>Reads a ramp's current value.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_ramp_value(IntPtr ramp);

    /// <summary>Forces a ramp to a value without rate limiting.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ramp_set(IntPtr ramp, float value);

    /// <summary>Releases a ramp handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_ramp_free(IntPtr ramp);

    /// <summary>Creates a detector for rises of more than the given size.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_surge_rising(float limit);

    /// <summary>Creates a detector for falls of more than the given size.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_surge_falling(float limit);

    /// <summary>Feeds a value to a surge detector, reporting a step past the limit.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_surge_update(IntPtr surge, float value, out float outDelta);

    /// <summary>Releases a surge handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_surge_free(IntPtr surge);

    /// <summary>Creates a linear calibration.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_calibration_linear(float scale, float offset);

    /// <summary>Creates a calibration fitted through two reference points.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_calibration_two_point(
        float rawLow,
        float valueLow,
        float rawHigh,
        float valueHigh);

    /// <summary>Converts a raw reading into calibrated units.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_calibration_apply(IntPtr calibration, float raw);

    /// <summary>Releases a calibration handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_calibration_free(IntPtr calibration);

    /// <summary>Creates a circular geofence.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_geofence_new(PamojaCoordinate center, double radiusM);

    /// <summary>Feeds a fix to a geofence and reports where it sits.</summary>
    [LibraryImport(Library)]
    public static partial PamojaBoundary pamoja_geofence_update(
        IntPtr geofence,
        PamojaCoordinate point);

    /// <summary>Reports whether a fix lies inside a geofence.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_geofence_contains(IntPtr geofence, PamojaCoordinate point);

    /// <summary>Releases a geofence handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_geofence_free(IntPtr geofence);

    /// <summary>Returns the great-circle distance between two coordinates, in meters.</summary>
    [LibraryImport(Library)]
    public static partial double pamoja_coordinate_distance_to(
        PamojaCoordinate from,
        PamojaCoordinate to);

    /// <summary>Returns the initial bearing between two coordinates, in degrees.</summary>
    [LibraryImport(Library)]
    public static partial double pamoja_coordinate_bearing_to(
        PamojaCoordinate from,
        PamojaCoordinate to);

    /// <summary>Holds a reading at a center while it stays within a band either side.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_kit_deadband(float value, float center, float width);

    /// <summary>Creates a complementary filter.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_complementary_new(float alpha, float initial);

    /// <summary>Fuses a rate and an absolute reading over a time step.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_complementary_update(IntPtr filter, float rate, float absolute, float dt);

    /// <summary>Reads a complementary filter's estimate.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_complementary_estimate(IntPtr filter);

    /// <summary>Releases a complementary filter handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_complementary_free(IntPtr filter);

    /// <summary>Computes roll and pitch from a three-axis accelerometer at rest.</summary>
    [LibraryImport(Library)]
    public static partial PamojaTilt pamoja_imu_tilt_from_accel(double ax, double ay, double az);

    /// <summary>Computes the dew point from the air temperature and relative humidity.</summary>
    [LibraryImport(Library)]
    public static partial double pamoja_weather_dew_point(double celsius, double humidityPercent);

    /// <summary>Converts degrees Celsius to degrees Fahrenheit.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_celsius_to_fahrenheit(float celsius);

    /// <summary>Converts degrees Fahrenheit to degrees Celsius.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_fahrenheit_to_celsius(float fahrenheit);

    /// <summary>Converts degrees Celsius to kelvin.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_celsius_to_kelvin(float celsius);

    /// <summary>Converts kelvin to degrees Celsius.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_kelvin_to_celsius(float kelvin);

    /// <summary>Converts pascals to hectopascals.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_pascals_to_hectopascals(float pascals);

    /// <summary>Converts hectopascals to pascals.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_hectopascals_to_pascals(float hectopascals);

    /// <summary>Converts pascals to kilopascals.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_pascals_to_kilopascals(float pascals);

    /// <summary>Converts kilopascals to pascals.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_kilopascals_to_pascals(float kilopascals);

    /// <summary>Converts pascals to pounds per square inch.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_pascals_to_psi(float pascals);

    /// <summary>Converts pounds per square inch to pascals.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_psi_to_pascals(float psi);

    /// <summary>Converts a ratio from 0 to 1 to a percentage.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_ratio_to_percent(float ratio);

    /// <summary>Converts a percentage to a ratio from 0 to 1.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_units_percent_to_ratio(float percent);
}

/// <summary>Roll and pitch, in degrees.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaTilt
{
    /// <summary>Rotation about the forward axis, in degrees, from -180 to 180.</summary>
    public double Roll;

    /// <summary>Rotation about the right axis, in degrees, from -90 to 90.</summary>
    public double Pitch;
}
